k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: kb-freshrss
  labels:
    component: freshrss
spec:
  type: ClusterIP
  selector:
    component: freshrss
  ports:
    - name: http
      port: 80
      targetPort: http
